tests/snapshots/suppression/file_level_fmt_alias.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/file_level_fmt_alias.input.py
---

