tests/snapshots/suppression/file_level_off.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/file_level_off.input.py
---

