tests/snapshots/suppression/file_level_off.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/suppression/file_level_off.input.py
---
# prose: off
# A file-level prose: off at the top of the source opts every
# subsequent line out of every rule. The text below survives
# untouched across passes regardless of how many rules would
# otherwise fire.

x = 1
foo = 2
bar_baz = 3

config = {"z": 1, "a": 2,}


def helper(b, a):
    pass
