tests/snapshots/suppression/idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/idempotent.input.py
---
alphabetize@116..151
docstring-wrap@68..80
