tests/snapshots/suppression/idempotent.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/suppression/idempotent.input.py
---
"""
Already-formatted source carrying every directive shape produces
no further edits on a fresh pipeline run.
"""

x       = 1
foo     = 2
bar_baz = 3

# fmt: off
short = 1
much_longer_name = 2
mid = 3
# fmt: on

skipped = 4  # fmt: skip

a   = 1
bb  = 2
ccc = 3
