tests/snapshots/suppression/multiple_blocks.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/suppression/multiple_blocks.input.py
---
"""
Two distinct fmt: off / fmt: on blocks remain separate suppressed
spans rather than fusing into one. Code outside the blocks aligns
normally while code inside each block stays verbatim.
"""

x       = 1
foo     = 2
bar_baz = 3

# fmt: off
inside_one_alpha = 1
inside_one_beta = 2
# fmt: on

a   = 1
bb  = 2
ccc = 3

# fmt: off
inside_two_alpha = 1
inside_two_beta = 2
# fmt: on

ww   = 1
xxx  = 2
yyyy = 3
