tests/snapshots/suppression/nested_flat.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/nested_flat.input.py
---
align-equals@183..184
align-equals@191..192
align-equals@282..283
align-equals@289..290
docstring-wrap@63..157
